[package]
name = "dnsmasq-linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
axum = "0.7.3"
iter_tools = "0.4.0"
itertools = "0.12.0"
minijinja = "1.0.10"
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
